# user-service/src/main/java/hu/webuni/userservice/dto/LoginDto.java
@@ -1,12 +1,0 @@
-package hu.webuni.userservice.dto;
-
-import lombok.AllArgsConstructor;
-import lombok.Data;
-
-@Data
-@AllArgsConstructor
-public class LoginDto {
-
-	public String username;
-	public String password;
-}
